# servo_easing

./: CMakeLists.txt  README.md
include/: SE_controller.h  SE_enum.h  SE_errors.h  SE_servo.h  SE_ticks.h  servo_easing.h
internal/: SE_def.h  SE_logging.h
src/: SE_algorithm.c  SE_algorithm.h  SE_algorithm_no_fp.c  SE_controller.c  SE_errors.c  SE_servo.c  SE_ticks.c  servo_easing.c
src/Dummy/: dummy_controller.c  dummy_controller.h
src/MTK_9050/: mtk_9050_controller.c  mtk_9050_dc_controller.c  mtk_9050_dc_controller.h  mtk_9050_linux_controller.c  mtk_9050_linux_controller.h  mtk_9050_pwm.c  mtk_9050_pwm.h
src/PCA9685/: pca9685_controller.c  pca9685_controller.h
src/PCA9685_linux/: pca9685_linux_controller.c  pca9685_linux_controller.h
src/STM32/: stm32_controller.c  stm32_controller.h
test/: CMakeLists.txt  test_servo_easing.c
